@@ -80,9 +80,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>23</source>
-          <target>23</target>
-            <compilerArgs>--enable-preview</compilerArgs>
+          <source>24</source>
+          <target>24</target>
         </configuration>
       </plugin>
       <plugin>
